# dso_search

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_visualizations.py
data/: abell_north.tsv  abell_south.tsv  barnard.tsv  caldwell_raw.txt  catalog_status.json  dataset_summary.json  lbn.tsv  lbn_raw.txt  ldn.tsv  merged_dso.csv  messier.tsv  messier_diameters.tsv  ngc2000.tsv  processed_abell.csv  processed_ldn.csv  processed_messier.csv  processed_ngc.csv  processed_sharpless.csv  processed_vdb.csv  sharpless.tsv  vdb.tsv
data/processed/: processed_barnard.csv  processed_caldwell.csv  processed_ic.csv  processed_lbn.csv  processed_messier.csv
data/raw/: caldwell_raw.txt  lbn_raw.txt  messier_catalog_info.txt  messier_names.tsv  messier_raw.txt  requirements.txt
dso_search/api/: main.py  models.py
dso_search/catalog/: __init__.py  fetch_messier_diameters.py  fetch_messier_simbad.py  process_abell.py  process_barnard.py  process_caldwell.py  process_lbn.py  process_ldn.py  process_messier.py  process_ngc.py  process_sharpless.py  process_vdb.py
dso_search/utils/: __init__.py  analyze_data_quality.py  inspect_data.py  verify_data.py  verify_downloads.py  visualize_data.py
tests/: conftest.py  test_api.py  test_data_loading.py
tests/catalog/: validate_ngc.py  verify_aggregated_data.py  verify_all_catalogs.py
