[tool.poetry]
name = "app"
version = "0.1.0"
description = "Deep Space Object Search API"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pandas = "^2.2.3"
numpy = "^1.26.4"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
